--- a/server/app/views/sidebar.scala.html
+++ b/server/app/views/sidebar.scala.html
@@ -1,11 +1,10 @@
 @* sidebar Template File *@
-@(calendar: Html)
 
-		<!-- Sidebar -->
+@(navOpts:Array[(String,String)],currInd:Int,calendar: Html)
+<!-- Sidebar -->
 			<div id="sidebar">
-
 				<!-- Logo -->
-					<h1 id="logo"><a href="/">TEDx Trinity</a></h1>
+					<h1 id="logo"><a href="/"><img src="@routes.Assets.versioned("images/TEDxTrinityLogo.png")" alt="TEDxTrinity"/></a></h1>
 
 				<!-- Search -->
 					<section class="box search">
@@ -17,10 +16,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Upcoming Events</a></li>
-							<li><a href="/AboutTED">About TED</a></li>
-							<li><a href="/Sponsors">Sponsors</a></li>
-							<li><a href="/sidebar/contact">Contact Us</a></li>
+						@for(ind <- 0 until navOpts.length) {
+						  @if(ind == currInd) {<li class="current"><a href="@navOpts(ind)._1">@navOpts(ind)._2</a></li>}
+						  @if(ind != currInd) {<li><a href="@navOpts(ind)._1">@navOpts(ind)._2</a></li>}
+						}
 						</ul>
 					</nav>
 
