--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -2173,12 +2173,16 @@
 			text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.5);
 			box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
 			text-align: center;
+			height: 44px;
+			width: 120px;
 		}
+
 
 			#titleBar .title a {
 				color: inherit;
 				text-decoration: none;
 			}
+			
 
 		#titleBar .toggle {
 			width: 80px;
@@ -2214,6 +2218,14 @@
 
 			#titleBar .toggle:active:before {
 				background-color: #d95673;
+			}
+			#titleBar .title img {
+				width: 120px;
+				height: 40px;
+				border-radius: 5px;
+			    position: absolute;
+			    top: 0; bottom:0; left: 0; right:0;
+			    margin: auto; 
 			}
 
 	#sidebar {
@@ -2415,7 +2427,7 @@
 				font-size: 2em;
 				letter-spacing: 0.1em;
 			}
-
+/*
 				#logo a {
 					display: block;
 					background-color: #c94663;
@@ -2426,6 +2438,14 @@
 					box-shadow: inset 0px 0px 0px 1px rgba(255, 255, 255, 0.15), 0 0.025em 0.15em 0em rgba(0, 0, 0, 0.25);
 					text-decoration: none;
 					color: #fff;
+				}
+				
+				*/
+				
+				#logo img {
+					border-radius: 0.2em;
+					width: 195px;
+					height: 65px;
 				}
 
 		/* Content */
