--- a/server/app/views/contact.scala.html
+++ b/server/app/views/contact.scala.html
@@ -1,7 +1,7 @@
 @* contact Template File *@
 @()
 
-@{
+
 <article class="box post post-excerpt">
   <header>
 		<h2>
@@ -13,13 +13,12 @@
     <strong> Rohan Walawalkar: President </strong>
     
     Trinity University Class of 2020, I don't know your major. <br/>
-    rwalawal@trinity.edu 
+    rwalawalATtrinity.edu 
   </p>
   <p>
     <strong> Jordan Koeller: Web Designer </strong>
     <br/>
     Trinity University class of 2019, Physics & Computer Science <br/>
-    jkoeller@trinity.edu	
+    jkoellerATtrinity.edu	
   </p>
 </article>
-}
