Pushing favicon, cleaned up some old images. Still need to center the menu icon when in phone view - a CSS problem

--- a/server/app/views/homeLicenseStatement.scala.html
+++ b/server/app/views/homeLicenseStatement.scala.html
@@ -13,8 +13,8 @@
 	created a program called TEDx. TEDx is a program
 	of local, self-organized events that bring people
 	together to share a TED-like experience. Our
-	event is called TEDxTrinity, where x = independently
-	organized TED event. At our TEDxTrinity event, TED
+	event is called TEDxTrinityUniversity, where x = independently
+	organized TED event. At our TEDxTrinityUniversity event, TED
 	Talks video and live speakers will combine to spark
 	deep discussion and connection in a small group.
 	The TED Conference provides general guidance for
