--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -8,12 +8,14 @@
 -->
 <html>
 	<head>
-		<title>Striped by HTML5 UP</title>
+		<title>TEDxTrinityUniversity</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="@routes.Assets.versioned("js/ie/html5shiv.js")"></script><![endif]-->
 		<link rel="stylesheet" href="@routes.Assets.versioned("css/main.css")" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="@routes.Assets.versioned("css/ie8.css")" /><![endif]-->
+  		<link rel="icon" href="@routes.Assets.versioned("images/favicon.png")" type="image/png" sizes="20x20">
+
 	</head>
 	<body>
 	  <div id="content">
