--- a/server/app/views/tedEvent.scala.html
+++ b/server/app/views/tedEvent.scala.html
@@ -25,6 +25,9 @@
 
 								-->
 								<span class="date"><span class="month">@model.monthPrefix<span>@model.monthSuffix</span></span> <span class="day">@model.date.getDayOfMonth</span><span class="year">, @model.date.getYear</span></span>
+								<ul class="stats">
+									<li>@model.time</li>
+								</ul>
 								<!--
 									Note: You can change the number of list items in "stats" to whatever you want.
 								-->
