--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -6,7 +6,7 @@
 	html5up.net | ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-Content-Security-Policy: default-src 'self'; img-src *; media-src YouTube.com;
+<!--  Content-Security-Policy: default-src 'self'; img-src *; media-src YouTube.com; -->
 
 <html>
 	<head>
