--- a/server/app/views/tedEvent.scala.html
+++ b/server/app/views/tedEvent.scala.html
@@ -2,7 +2,8 @@
 @import models.TEDEvent
 
 @(model:TEDEvent)
-
+<button class="accordion"><h2>@model.title</h2></button>
+  <div class="panel">
 						<article class="box post post-excerpt">
 							<header>
 								<!--
@@ -10,7 +11,9 @@
 									if they get too long. You can also remove the <p> entirely if you don't
 									need a subtitle.
 								-->
+								<!-- 
 								<h2>@model.title</h2>
+								 -->
 								@if(model.subtitle.isDefined) {
     								<p>@model.subtitle.get</p>
 								}
@@ -48,3 +51,4 @@
 								@model.description
 							</p>
 						</article>
+  </div>
