--- a/server/app/views/tedEvent.scala.html
+++ b/server/app/views/tedEvent.scala.html
@@ -1,54 +1,46 @@
 @* tedEvent Template File *@
 @import models.TEDEvent
-
 @(model:TEDEvent)
-<button class="accordion"><h2>@model.title</h2></button>
-  <div class="panel">
-						<article class="box post post-excerpt">
-							<header>
-								<!--
-									Note: Titles and subtitles will wrap automatically when necessary, so don't worry
-									if they get too long. You can also remove the <p> entirely if you don't
-									need a subtitle.
-								-->
-								<!-- 
-								<h2>@model.title</h2>
-								 -->
-								@if(model.subtitle.isDefined) {
-    								<p>@model.subtitle.get</p>
-								}
-							</header>
-							<div class="info">
-								<!--
-									Note: The date should be formatted exactly as it's shown below. In particular, the
-									"least significant" characters of the month should be encapsulated in a <span>
-									element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
-									Oh, and if you don't need a date for a particular page or post you can simply delete
-									the entire "date" element.
-
-								-->
-								<span class="date"><span class="month">@model.monthPrefix<span>@model.monthSuffix</span></span> <span class="day">@model.date.getDayOfMonth</span><span class="year">, @model.date.getYear</span></span>
-								<ul class="stats">
-									<li>@model.time</li>
-								</ul>
-								<!--
-									Note: You can change the number of list items in "stats" to whatever you want.
-								-->
-<!-- 								<ul class="stats">
-									<li><a href="#" class="icon fa-comment">@(model.numAttendants)/@(model.maxSeats)</a></li>
-								</ul> -->
-							</div>
-							@if(model.imgURL.isDefined) {
-							  <a href="#" class="image featured"><img src="@model.imgURL.get" alt="" /></a>
-							}
-							<p>
-								<strong>Speaker: </strong> @model.speaker
-							</p>
-							<p>
-								<strong>Where: </strong>@model.venue
-							</p>
-							<p>
-								@model.description
-							</p>
-						</article>
-  </div>
+<article class="box post post-excerpt">
+	<button class="accordion">
+	<header>
+		<h2>@model.title</h2>
+			@if(model.subtitle.isDefined) {
+			<p>@model.subtitle.get</p>
+			}
+		</header>
+		</button>
+		<div class="panel">
+			<div class="info">
+				<!--
+				Note: The date should be formatted exactly as it's shown below. In particular, the
+				"least significant" characters of the month should be encapsulated in a <span>
+							element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
+							Oh, and if you don't need a date for a particular page or post you can simply delete
+							the entire "date" element.
+					-->
+					<span class="date"><span class="month">@model.monthPrefix<span>@model.monthSuffix</span></span> <span class="day">@model.date.getDayOfMonth</span><span class="year">, @model.date.getYear</span></span>
+					<ul class="stats">
+						<li>@model.time</li>
+					</ul>
+					<!--
+					Note: You can change the number of list items in "stats" to whatever you want.
+					-->
+					<!-- 								<ul class="stats">
+						<li><a href="#" class="icon fa-comment">@(model.numAttendants)/@(model.maxSeats)</a></li>
+					</ul> -->
+				</div>
+				@if(model.imgURL.isDefined) {
+				<a href="#" class="image featured"><img src="@model.imgURL.get" alt="" /></a>
+				}
+				<p>
+					<strong>Speaker: </strong> @model.speaker
+				</p>
+				<p>
+					<strong>Where: </strong>@model.venue
+				</p>
+				<p>
+					@model.description
+				</p>
+			</div>
+		</article>
