--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -8,33 +8,7 @@
 */
 
 
-/* Custom CSS */
 
-
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-}
-
-.active, .accordion:hover {
-    background-color: #ccc;
-}
-
-.panel {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-}
 
 /* Reset */
 
@@ -2523,10 +2497,10 @@
 	}
 
 /* Wide */
-
+/*
 	@media screen and (min-width: 1201px) {
 
-		/* Basic */
+		
 
 			body {
 				min-width: 1200px;
@@ -2537,7 +2511,7 @@
 				font-size: 12pt;
 			}
 
-		/* Box */
+		
 
 			.box.post h2 {
 				font-size: 3.25em;
@@ -2557,12 +2531,16 @@
 					margin-bottom: -0.65em;
 				}
 
+
+
+
+
 			.box.post .info {
 				position: absolute;
 				width: 5.5em;
 				overflow: hidden;
 				background-color: #fff;
-/*				background-image: url("images/bg02.png"); */
+
 				left: -10.5em;
 				top: 0;
 				padding: 1.5em 1em 1.5em 1em;
@@ -2625,7 +2603,7 @@
 								opacity: 0.35;
 							}
 
-		/* Content */
+
 
 			#content {
 				padding: 3em 5em 8em 5em;
@@ -2633,10 +2611,10 @@
 			}
 
 	}
-
+*/
 /* Narrow */
 
-	@media screen and (min-width: 737px) and (max-width: 1200px) {
+	@media screen and (min-width: 737px) {
 
 		/* Basic */
 
@@ -2709,7 +2687,11 @@
 
 			#content {
 				padding: 2em 3em 6em 3em;
-				margin-left: 14em;
+				margin-left: 16em;
+			}
+
+			#sidebar {
+				width: 240px;
 			}
 
 	}
@@ -2751,9 +2733,9 @@
 
 		/* Sidebar */
 
-			#sidebar {
+/*			#sidebar {
 				padding: 30px 20px 30px 20px;
-			}
+			}*/
 
 	}
 
@@ -2980,3 +2962,47 @@
 			}
 
 	}
+	
+	
+	
+	
+	
+	
+/* Custom CSS */
+
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    transition: 0.4s;
+}
+/*
+.accordion header , .accordion header p{
+	font-size: 1.75em;
+	line-height: 1.5em;
+	position: relative;
+	top: -0.75em;
+	margin-bottom: -0.75em;
+}
+
+.accordion header p {
+	font-size: 1.5em;
+}
+*/
+.active, .accordion:hover {
+    background-color: #ccc;
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
