--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -1,11 +1,10 @@
-@(sidebar: Html, content: Html)
+@(title: String, content: Html, subtitle:Option[String]=None)
 <!DOCTYPE HTML>
 <!--
-	Striped by HTML5 UP
+	Twenty by HTML5 UP
 	html5up.net | ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<!--  Content-Security-Policy: default-src 'self'; img-src *; media-src YouTube.com; -->
 <html>
 	<head>
 		<title>TEDxTrinityUniversity</title>
@@ -14,17 +13,67 @@
 		<!--[if lte IE 8]><script src="@routes.Assets.versioned("js/ie/html5shiv.js")"></script><![endif]-->
 		<link rel="stylesheet" href="@routes.Assets.versioned("css/main.css")" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="@routes.Assets.versioned("css/ie8.css")" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="@routes.Assets.versioned("css/ie9.css")" /><![endif]-->
 		<link rel="icon" href="@routes.Assets.versioned("images/favicon.png")" type="image/png" sizes="20x20">
 	</head>
-	<body>
-		<div id="content">
-			<div class="inner">
+	<body class="no-sidebar">
+		<div id="page-wrapper">
+			<header id="header">
+				<h1 id="logo"><a href="/"><img src="@routes.Assets.versioned("images/TEDxTrinityLogo.png")" alt="TEDxTrinity" style="width: 180px; height: 65px;"/></a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="/Events">Upcoming Events</a></li>
+						<li><a href="/AboutTED">About TED</a></li>
+						<li><a href="/Sponsors">Sponsors</a></li>
+						<li><a href="/Contact">Contact Us</a></li>
+					</ul>
+				</nav>
+			</header>
+			<header class="special container">
+				<!-- <span class="icon fa-laptop"></span> -->
+				<h3>@title</h3>
+				@if(subtitle.isDefined) {
+				<p>@subtitle.get</p>
+				}
+			</header>
+			@*@menubar*@
+			<article id="main">
 				@content
-			</div>
+			</article>
+			@* BODY STUFF GOES HERE*@
+			<!-- Footer -->
+			<footer id="footer">
+				<h2>What is TEDx?</h2>
+				<p>
+					In the spirit of ideas worth spreading, TED has
+					created a program called TEDx. TEDx is a program
+					of local, self-organized events that bring people
+					together to share a TED-like experience. Our
+					event is called TEDxTrinityUniversity, where x = independently
+					organized TED event. At our TEDxTrinityUniversity event, TED
+					Talks video and live speakers will combine to spark
+					deep discussion and connection in a small group.
+					The TED Conference provides general guidance for
+					the TEDx program, but individual TEDx events,
+				including ours, are self-organized.	</p>
+				<ul class="icons">
+					<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
+					<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
+					<li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+					<p>This independent TEDx event is operated under license from TED.</p>
+			</footer>
 		</div>
-		@sidebar
 		<!-- Scripts -->
 		<script src="@routes.Assets.versioned("js/jquery.min.js")"></script>
+		<script src="@routes.Assets.versioned("js/jquery.dropotron.min.js")"></script>
+		<script src="@routes.Assets.versioned("js/jquery.scrolly.min.js")"></script>
+		<script src="@routes.Assets.versioned("js/jquery.scrollgress.min.js")"></script>
 		<script src="@routes.Assets.versioned("js/skel.min.js")"></script>
 		<script src="@routes.Assets.versioned("js/util.js")"></script>
 		<!--[if lte IE 8]><script src="@routes.Assets.versioned("js/ie/respond.min.js")"></script><![endif]-->
