--- a/server/public/sass/ie8.scss
+++ b/server/public/sass/ie8.scss
@@ -4,94 +4,41 @@
 @import 'libs/skel';
 
 /*
-	Striped by HTML5 UP
+	Twenty by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-	form {
-		input[type="text"],
-		input[type="email"],
-		input[type="password"],
-		select,
-		textarea {
-			position: relative;
-			box-shadow: none !important;
-			-ms-behavior: url('assets/js/ie/PIE.htc');
+/* Section/Article */
+
+	section,
+	article {
+		> .last-child,
+		&.last-child {
+			margin-bottom: 0;
 		}
 	}
 
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	button,
-	.button {
-		position: relative;
-		box-shadow: none !important;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-	}
+/* Banner */
 
-	.pagination {
-		.pages {
-			a {
-				position: relative;
-				box-shadow: none !important;
-				-ms-behavior: url('assets/js/ie/PIE.htc');
-			}
+	#banner {
+		background-image: url('../../images/banner.jpg');
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: auto;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+
+		.inner {
+			background: _palette(banner, inner-bg);
 		}
 	}
 
-	.box {
-		&.calendar {
-			td {
-				a, span {
-					position: relative;
-					box-shadow: none !important;
-					-ms-behavior: url('assets/js/ie/PIE.htc');
-				}
-			}
-		}
+/* CTA  */
 
-		&.text-style1 {
-			.inner {
-				position: relative;
-				box-shadow: none !important;
-				-ms-behavior: url('assets/js/ie/PIE.htc');
-			}
-		}
-	}
-
-	#nav {
-		li {
-			a {
-				position: relative;
-				box-shadow: none !important;
-				-ms-behavior: url('assets/js/ie/PIE.htc');
-			}
-		}
-	}
-
-	.box {
-		&.post {
-			.info {
-				box-shadow: none !important;
-				-ms-behavior: url('assets/js/ie/PIE.htc');
-
-				.stats {
-					li {
-						a {
-							position: relative;
-							box-shadow: none !important;
-							-ms-behavior: url('assets/js/ie/PIE.htc');
-						}
-					}
-				}
-			}
-		}
-	}
-
-	#logo {
-		position: relative;
-		box-shadow: none !important;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
+	#cta {
+		background-image: url('../../images/banner.jpg');
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: auto;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
 	}
