Working sponsors page, as well as contact. Just need to add functionality for images over articles

--- a/server/app/views/contact.scala.html
+++ b/server/app/views/contact.scala.html
@@ -11,12 +11,12 @@
     <strong> Rohan Walawalkar: President </strong>
     
     Trinity University Class of 2020, I don't know your major. <br/>
-    rwalawalATtrinity.edu
+    rwalawal@@trinity.edu
   </p>
   <p>
     <strong> Jordan Koeller: Web Designer </strong>
     <br/>
     Trinity University class of 2019, Physics & Computer Science <br/>
-    jkoellerATtrinity.edu
+    jkoeller@@trinity.edu
   </p>
 </article>
