--- a/server/app/views/sponsors.scala.html
+++ b/server/app/views/sponsors.scala.html
@@ -1,13 +1,3 @@
 @* sponsors Template File *@
 @()
-<article class="box post post-excerpt">
-	<header>
-		<h2>
-		Sponsors
-		</h2>
-	</header>
-	<div class="info"></div>
-	<p>
-		<a href="https://new.trinity.edu/">Trinity University</a>
-	</p>
-</article>
+<a href="https://new.trinity.edu/" class="image featured"><img src="@routes.Assets.versioned("images/TULogo.png")" alt=""/></a>
