--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -18,14 +18,15 @@
 	</head>
 	<body class="no-sidebar">
 		<div id="page-wrapper">
-			<header id="header">
-				<h1 id="logo"><a href="/"><img src="@routes.Assets.versioned("images/TEDxTrinityLogo.png")" alt="TEDxTrinity" style="width: 180px; height: 65px;"/></a></h1>
+			<header id="header"style="height:70px;">
+				<!-- <h1 id="logo"><a href="/"><img src="@routes.Assets.versioned("images/TEDxTrinityLogo.png")" alt="TEDxTrinity" style="width: 180px; height: 65px;"/></a></h1> -->
+				<h1 id="logo"><a href="/"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="/Events">Upcoming Events</a></li>
-						<li><a href="/AboutTED">About TED</a></li>
-						<li><a href="/Sponsors">Sponsors</a></li>
-						<li><a href="/Contact">Contact Us</a></li>
+						<li><a class="menuitem" href="/Events">Upcoming Events</a></li>
+						<li><a class="menuitem" href="/AboutTED">About TED</a></li>
+						<li><a class="menuitem" href="/Sponsors">Sponsors</a></li>
+						<li><a class="menuitem" href="/Contact">Contact Us</a></li>
 					</ul>
 				</nav>
 			</header>
