--- a/server/app/views/tedEventBody.scala.html
+++ b/server/app/views/tedEventBody.scala.html
@@ -55,12 +55,25 @@ Note: The date should be formatted exactly as it's shown below. In particular, t
 				<div class="sidebar">
 					<section>
 						<header>
-							<h3>Magna Feugiat</h3>
+							<h3>Logistics</h3>
 						</header>
-						<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+							<ul class="logistics">
+							<li class="logisticEntry">
+								<strong>Date:</strong> @(model.monthPrefix+model.monthSuffix) @model.date.getDayOfMonth, @model.date.getYear
+							</li>
+							<li class="logisticEntry">
+								<strong>Time:</strong> @model.time
+							</li>
+							<li class="logisticEntry">
+								<strong>Venue:</strong> @model.venue
+							</li>
+							<li class="logisticEntry">
+								<strong>Seats:</strong> @model.numAttendants / @model.maxSeats
+							</li>
+							</ul>
 						<footer>
 							<ul class="buttons">
-								<li><a href="#" class="button small">Learn More</a></li>
+								<li><a href="#" class="button small">Register</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -72,11 +85,10 @@ Note: The date should be formatted exactly as it's shown below. In particular, t
 					<section>
 						<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 						<header>
-							<h3>Dolore Amet Consequat</h3>
+							<h3>@model.title</h3>
 						</header>
-						<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-						<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
-						<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
+						<p><strong>Speakers:</strong><br>@model.speaker </p>
+						<p><strong>Description:</strong><br>@model.description</p>
 					</section>
 				</div>
 			</div>
