--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -18,11 +18,11 @@
 	</head>
 	<body class="no-sidebar">
 		<div id="page-wrapper">
-			<header id="header"style="height:70px;">
-				<!-- <h1 id="logo"><a href="/"><img src="@routes.Assets.versioned("images/TEDxTrinityLogo.png")" alt="TEDxTrinity" style="width: 180px; height: 65px;"/></a></h1> -->
-				<h1 id="logo"><a href="/"></a></h1>
+			<header id="header"style="height:90px;">
+				<h1 id="logo"><a href="/"><img src="@routes.Assets.versioned("images/TEDxTrinityLogo.png")" alt="TEDxTrinity" style="width: 180px; height: 65px;"/></a></h1>
 				<nav id="nav">
 					<ul>
+						
 						<li><a class="menuitem" href="/Events">Upcoming Events</a></li>
 						<li><a class="menuitem" href="/AboutTED">About TED</a></li>
 						<li><a class="menuitem" href="/Sponsors">Sponsors</a></li>
